crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__net_fetch_truncated.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<http_response
  url="https://example.com/large-page"
  status_code="200"
  start_char="0"
  end_char="55"
  total_chars="72"
  content_type="text/markdown"
>
<body><![CDATA[AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA]]></body>
<truncated>Content is truncated to 55 chars, remaining content can be read from path: /tmp/forge_fetch_abc123.txt</truncated>
</http_response>
