crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__shell_output_empty_streams.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<shell_output
  command="silent_command"
  shell="/bin/bash"
  exit_code="0"
>
</shell_output>
