crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__shell_output_no_truncation.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<shell_output
  command="echo hello"
  shell="/bin/bash"
  exit_code="0"
>
<stdout
  total_lines="2"
><![CDATA[hello
world]]>
</stdout>
</shell_output>
